Fix layout shift on lyrics container hover

--- a/src/renderer/styles/global.scss
+++ b/src/renderer/styles/global.scss
@@ -75,8 +75,6 @@ button {
 }
 
 .hide-scrollbar {
-    scrollbar-color: transparent transparent;
-
     &::-webkit-scrollbar-track {
         background: transparent;
     }
